@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.2,v 1.1.2.10 2001/08/16 13:53:07 tv Exp $
+#	$NetBSD: CHANGES-1.5.2,v 1.1.2.11 2001/08/16 15:15:03 tv Exp $
 
 A complete list of changes from NetBSD 1.5.1 to NetBSD 1.5.2:
 
@@ -179,3 +179,7 @@ sys/dev/ic/pckbc.c				1.6-1.8
 sys/kern/sysv_sem.c				1.41
 
   Make local variable "nsops" the same (unsigned) type as its syscall arg.
+
+sys/ufs/lfs/lfs_syscalls.c			1.58 via patch
+
+  Constrain "blkcnt" of lfs_markv() syscall by 64KB.
